# bevy_webxr_prototype

./: Cargo.toml  Makefile.toml  notes.md
.cargo/: config.toml
assets/: shapes.3dm  shapes.glb  shapes.glbbak  shapes.gltf
examples/: balloons.rs  webxr_example.rs
src/: camera.rs  dom_point.rs  error.rs  events.rs  graphics.rs  init.rs  lib.rs  projection.rs  session.rs
src/tracked/: camera.rs  controllers.rs  hands.rs  mod.rs  space.rs
