[package]
name = "bevy_webxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["crates/*"]

[dependencies]
bevy = { version = "0.11.2", features = ["webgl2"] }
bevy_xr = { path = "../bevy_xr" }

wgpu-hal = { version = "0.16.0", features = ["gles"] }
wgpu = "0.16.0"
glow = "0.12.1"

thiserror = "1.0.50"

futures = "0.3.26"
js-sys = "0.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.61", features = [
    "Window",
    "Navigator",
    "XrBoundedReferenceSpace",
    "XrEye",
    "XrFrame",
    "XrHandedness",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrInputSourceEventInit",
    "XrInputSourcesChangeEvent",
    "XrInputSourcesChangeEventInit",
    "XrPose",
    "XrReferenceSpace",
    "XrReferenceSpaceEvent",
    "XrReferenceSpaceEventInit",
    "XrReferenceSpaceType",
    "XrRenderState",
    "XrRenderStateInit",
    "XrRigidTransform",
    "DomPointReadOnly",
    "XrSession",
    "XrSessionEvent",
    "XrSessionEventInit",
    "XrSessionInit",
    "XrSessionMode",
    "XrSpace",
    "XrSystem",
    "XrTargetRayMode",
    "XrView",
    "XrViewerPose",
    "XrViewport",
    "XrVisibilityState",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrHand",
    "XrHandJoint",
    "XrJointSpace",
    "XrJointPose",
    "Gamepad",
    "HtmlButtonElement",
] }


[[example]]
name = "webxr_example"
path = "examples/webxr_example.rs"
