[package]
name = "bevy_webxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["crates/*"]

[dependencies]
#bevy = { version = "0.13.1", features = ["webgl2"] }
bevy = { git = "https://github.com/bevyengine/bevy", features = ["webgl2"] }
bevy_xr = { path = "../bevy_xr" }

wgpu-hal = { version = "0.19.3", features = ["gles"] }
wgpu = "0.19.3"
glow = "0.13.1"

thiserror = "1.0.58"

web-sys = { version = "0.3.69", features = [
    "Window",
    "Navigator",
    "XrBoundedReferenceSpace",
    "XrEye",
    "XrFrame",
    "XrHandedness",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrInputSourceEventInit",
    "XrInputSourcesChangeEvent",
    "XrInputSourcesChangeEventInit",
    "XrPose",
    "XrReferenceSpace",
    "XrReferenceSpaceEvent",
    "XrReferenceSpaceEventInit",
    "XrReferenceSpaceType",
    "XrRenderState",
    "XrRenderStateInit",
    "XrRigidTransform",
    "DomPointReadOnly",
    "XrSession",
    "XrSessionEvent",
    "XrSessionEventInit",
    "XrSessionInit",
    "XrSessionMode",
    "XrSpace",
    "XrSystem",
    "XrTargetRayMode",
    "XrView",
    "XrViewerPose",
    "XrViewport",
    "XrVisibilityState",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrHand",
    "XrHandJoint",
    "XrJointSpace",
    "XrJointPose",
    "Gamepad",
    "GamepadButton",
    "HtmlButtonElement",
] }
futures = "0.3.30"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"


[[example]]
name = "webxr_example"
path = "examples/webxr_example.rs"

[[example]]
name = "balloons"
path = "examples/balloons.rs"
